--- a/index.html
+++ b/index.html
@@ -3,9 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather App</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="card">
+        <div class="search">
+            <input type="text" placeholder="enter city name" spellcheck="false">
+            <button><img src="images/search.png"></button>
+        </div>
+        <div class="error">
+            <p>invalid city name</p>
+        </div>
+        <div class="weather">
+            <img src="images/rain.png" class="weather-icon">
+            <h1 class="temp">20°C</h1>
+            <h2 class="city">New York</h2>
+            <div class="details">
+                <div class="col">
+                    <img src="Images/humidity.png">
+                    <div>
+                        <p class="humidity">50%</p>
+                        <p> Humidity</p>
+
+                    </div>
+                    <div class="col">
+                        <img src="Images/wind.png">
+                        <div>
+                            <p class="wind">50%</p>
+                            <p> Wind speed</p>
     
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="index.js">
+        
+    </script>
 </body>
 </html>
